--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 167,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "c2f7bef7-c56f-4d67-db4f-0145503bb86b"
+        "outputId": "e67709f0-131f-4afa-ebeb-ab4a3c458a2b"
       },
       "outputs": [
         {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 168,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -122,24 +122,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 169,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "63d16165-e923-4333-9dfd-8c374092aa96"
+        "outputId": "96f2c247-6014-492d-d1b4-0e39e34c11df"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7cd377825750>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7cd3771c8090>"
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 169
         }
       ],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 170,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -243,24 +243,22 @@
         "      return self._ego_state_agent\n",
         "\n",
         "  def longitudinal_lead_state(self):\n",
-        "    # Lead State Parameters on the same Lane (5 columns: presence, x, y, vx, vy)\n",
-        "    ego_vehicle = env.unwrapped.vehicle\n",
-        "    lead_vehicle = env.unwrapped.road.neighbour_vehicles(ego_vehicle, lane_index=ego_vehicle.lane_index)[0]\n",
+        "      # Lead State Parameters on the same Lane (5 columns: presence, x, y, vx, vy)\n",
+        "      ego_vehicle = env.unwrapped.vehicle\n",
+        "      lead_vehicle = env.unwrapped.road.neighbour_vehicles(ego_vehicle, lane_index=ego_vehicle.lane_index)[0]\n",
         "\n",
-        "    if lead_vehicle:\n",
-        "      gap = lead_vehicle.position[0] - ego_vehicle.position[0]\n",
-        "      delta_velocity = ego_vehicle.velocity[0] - lead_vehicle.velocity[0]\n",
-        "      self.longitudinal_lead_state = {\"x\": gap, \"vx\": delta_velocity}\n",
+        "      if lead_vehicle:\n",
+        "          gap = lead_vehicle.position[0] - ego_vehicle.position[0]\n",
+        "          delta_velocity = ego_vehicle.velocity[0] - lead_vehicle.velocity[0]\n",
+        "          self._longitudinal_lead_state = {\"x\": gap, \"vx\": delta_velocity}\n",
+        "      else:\n",
+        "          self._longitudinal_lead_state = {\"x\": 10, \"vx\": 0}\n",
         "\n",
-        "    else:\n",
-        "      self.longitudinal_lead_state = {\"x\": 10, \"vx\": 0}\n",
-        "\n",
-        "    return self.longitudinal_lead_state\n",
-        "\n",
+        "      return self._longitudinal_lead_state\n",
         "\n",
         "  def idm_controller(self):\n",
         "      # Unpack input variables: [s, v, delta_v]\n",
-        "      s, v, delta_v = self.longitudinal_lead_state['x'], self.ego_state_idm['vx'], self.longitudinal_lead_state['vx']\n",
+        "      s, v, delta_v = self.longitudinal_lead_state()['x'], self.ego_state_idm()['vx'], self.longitudinal_lead_state()['vx']\n",
         "\n",
         "      # Small epsilon to account for very small gaps and avoid division by zero\n",
         "      epsilon = 1e-6\n",
@@ -320,22 +318,18 @@
         "    return [self.reward, acce_reward, rate_reward, time_reward]\n",
         "\n",
         "\n",
-        "  def action(self,obs,action):\n",
-        "    self.obs = obs\n",
-        "    self.action = action\n",
-        "    L = env.unwrapped.vehicle.LENGTH\n",
-        "    self.acc = self.idm_controller\n",
+        "  def action(self, obs, lateral_action):\n",
+        "      self.obs = obs\n",
+        "      L = env.unwrapped.vehicle.LENGTH\n",
+        "      self.acc = self.idm_controller()\n",
         "\n",
-        "    \"\"\"\n",
-        "    Steering Angle: theta = atan(a_yaw/v^2)\n",
-        "    a_yaw = lateral acceleration (agent_action)\n",
-        "    v = vehicle speed (vx)\n",
-        "    \"\"\"\n",
+        "      # Calculate steering angle from lateral acceleration\n",
+        "      self.angle = math.atan(L * lateral_action / self.ego_state_idm()['vx']**2)\n",
         "\n",
-        "    self.angle = math.atan(L*action/self.ego_state_idm()['vx']**2)\n",
-        "    self.action = [self.acc,self.angle]\n",
+        "      # Return the action as [longitudinal_acceleration, steering_angle]\n",
+        "      calculated_action = [self.acc, self.angle]\n",
         "\n",
-        "    return self.action"
+        "      return calculated_action"
       ]
     },
     {
@@ -383,12 +377,12 @@
         "        action = m.sample()\n",
         "        log_prob = m.log_prob(action)\n",
         "\n",
-        "        return action.item(), log_prob, value"
+        "        return action, log_prob, value"
       ],
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 113,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -402,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 172,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -521,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 173,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -569,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 174,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -687,7 +681,6 @@
         "    obs, _ = env.reset()\n",
         "    state_manager.update(obs)\n",
         "\n",
-        "\n",
         "    # Initialize target_id\n",
         "    target_id = env.unwrapped.vehicle.lane_index[-1]\n",
         "    agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
@@ -758,13 +751,8 @@
         "            # Reset environment if more episodes needed\n",
         "            if episodes_completed_in_rollout < max_episodes_per_rollout and t < T:\n",
         "                obs, _ = env.reset()\n",
-        "                state_manager = ENV(obs, 0.0)\n",
-        "                ego_state_idm = state_manager.ego_state_idm()\n",
-        "                lead_state = state_manager.longitudinal_lead_state()\n",
+        "                state_manager.update(obs)\n",
         "                target_id = env.unwrapped.vehicle.lane_index[-1]\n",
-        "                gap = lead_state['x']\n",
-        "                delta_velocity = lead_state['vx']\n",
-        "                input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
         "                obs_old = obs\n",
         "                done = False\n",
         "\n",
@@ -913,30 +901,39 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
+          "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "b51c8ec5-d30e-4de3-aa23-19952d5dafa2"
+        "outputId": "d76c117e-a746-4deb-e7fc-09712e1dc256"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 0/1000 [00:00<?, ?it/s]\n"
+            "  0%|          | 1/1000 [01:04<17:50:50, 64.32s/it]"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'int' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-118-989876897.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m             \u001b[0magent_action\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m             \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0magent_action\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# Take action in environment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 0: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 2/1000 [01:46<14:12:59, 51.28s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 1: Collected 1000 timesteps, 4 episodes\n"
           ]
         }
       ]
@@ -945,6 +942,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -953,7 +951,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
