--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -354,13 +354,15 @@
         "        super().__init__()\n",
         "\n",
         "        # Policy head (actor)\n",
-        "        self.actor = nn.Sequential(\n",
+        "        self.shared = nn.Sequential(\n",
         "            nn.Linear(state_dim, hidden_size),\n",
         "            nn.Tanh(),\n",
         "            nn.Linear(hidden_size, hidden_size),\n",
-        "            nn.Tanh(),\n",
-        "            nn.Linear(hidden_size, action_dim)\n",
+        "            nn.Tanh()\n",
         "        )\n",
+        "\n",
+        "        self.actor_mean = nn.Linear(hidden_size, action_dim)\n",
+        "        self.actor_log_std = nn.Linear(torch.zeros(1, action_dim))\n",
         "\n",
         "        # Value head (critic)\n",
         "        self.critic = nn.Sequential(\n",
@@ -372,7 +374,18 @@
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.actor(x), self.critic(x)\n",
+        "        x = self.shared(x)\n",
+        "\n",
+        "        # Policy head\n",
+        "        action_mean = self.actor_mean(x)\n",
+        "        action_log_std = self.actor_log_std(x)\n",
+        "        action_std = torch.exp(action_log_std)\n",
+        "        action_dist = torch.distributions.Normal(action_mean, action_std)\n",
+        "\n",
+        "        # Value head\n",
+        "        value = self.critic(x)\n",
+        "\n",
+        "        return action_dist, value\n",
         "\n",
         "    def action(self, state):\n",
         "        action_logits, value = self.forward(state)\n",
@@ -387,7 +400,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -520,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -568,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -913,7 +926,7 @@
         "id": "gMY396Rx5F1J",
         "outputId": "2e4f998c-d220-4e54-dd21-7611e2aee922"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
