--- a/V3.ipynb
+++ b/V3.ipynb
@@ -387,13 +387,16 @@
         "\n",
         "        return action_dist, value\n",
         "\n",
-        "    def action(self, state):\n",
-        "        action_logits, value = self.forward(state)\n",
+        "    def action(self, state, deterministic = False):\n",
+        "        action_dist, value = self.forward(state)\n",
         "\n",
-        "        logits = torch.softmax(action_logits,dim=1)\n",
-        "        m = torch.distributions.Categorical(logits)\n",
-        "        action = m.sample()\n",
-        "        log_prob = m.log_prob(action)\n",
+        "        if deterministic:\n",
+        "            action = action_dist.mean\n",
+        "            log_prob = action_dist.log_prob(action)\n",
+        "\n",
+        "        else:\n",
+        "          action = action_dist.sample()\n",
+        "          log_prob = action_dist.log_prob(action)\n",
         "\n",
         "        return action, log_prob, value"
       ],
